add scholarships, review

--- a/CV/cv.tex
+++ b/CV/cv.tex
@@ -89,7 +89,7 @@
 \emph{Senior undergraduate student} (graduate: 2018)\\
 \href{http://www.ee.tsinghua.edu.cn/publish/eeen/index.html}{Department of Electronic Engineering}\\
 \href{http://www.tsinghua.edu.cn/publish/newthuen/index.html}{Tsinghua University}, Beijing, P.R.C\\% Your current or previous employment position
-Taiwanese citizen, Living in Beijing\\[1cm] 
+Taiwanese citizen, Living in Beijing\\[0.3cm] 
 % Institute for Advanced Study\\ % Your address
 % Einstein Drive\\
 % Princeton, N.J. \texttt{08540}
@@ -100,7 +100,7 @@ Email: \href{mailto:lzhbrian@gmail.com}{lzhbrian@gmail.com}\\ % Your email addre
 Wechat: lzhbrian\\
 Github: \href{http://www.github.com/lzhbrian}{github.com/lzhbrian}\\
 Linkedin: \href{http://www.linkedin.com/in/lzhbrian}{linkedin.com/in/lzhbrian}\\
-\textsc{URL}: \href{http://www.lzhbrian.me}{www.lzhbrian.me}\\ % Your academic/personal website
+\textsc{URL}: \href{http://www.lzhbrian.me}{www.lzhbrian.me} % Your academic/personal website
 
 % \vfill % Whitespace between contact information and specific CV information
 
@@ -119,8 +119,7 @@ Linkedin: \href{http://www.linkedin.com/in/lzhbrian}{linkedin.com/in/lzhbrian}\\
 
 \section*{Areas of Interest}
 Computer Science \\
-Data Mining, 
-Machine Learning \\
+Data Mining, Machine Learning \\
 Computer Vision 
 % Your primary areas of research interest
 
@@ -144,13 +143,16 @@ Computer Vision
 \years{2016.7-2016.8}Summer Research Intern, \href{http://dirl.iis.sinica.edu.tw/}{Data Insights Research Lab, Academia Sinica}, Taiwan
 \subsection*{Student Associations}
 \years{2015.9-2017.2}Vice President, \href{http://thumaker.cn}{THU MakerSpace}\\
-\years{2015.7-2016.5}Vice Leader (Web Dev), Dept. of Web \& Publicity, \href{http://eesast.com}{Student Asso.of Sci. \& Tech., EE, THU (EESAST)}\\
-\years{2015.9-2016.5}Vice Leader, Dept. of Competition, Student Asso.of Sci. \& Tech., THU (THUSAST)
+\years{2015.7-2016.5}Vice Leader (Web Dev Lead), Dept. of Web \& Publicity, \href{http://eesast.com}{\\Student Association of Science \& Technology, EE, THU (EESAST)}\\
+\years{2015.9-2016.5}Vice Leader, Dept. of Competition, Student Association of Science \& Technology, THU
 
 
 \section*{Service to the profession}
 \years{2017}
-Reviewer, \emph{\href{http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=4275028}{IEEE TNSM (IF=3.314) (IEEE Transactions on Network and Service Management)}}
+Reviewer, \emph{\href{http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=4275028}{IEEE TNSM (IF=3.314) (IEEE Transactions on Network and Service Management)}}\\
+\years{2017}
+Reviewer, \emph{\href{http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=4275028}{ACM IMWUT (Ubicomp) (Proceedings of the ACM on
+Interactive, Mobile, Wearable and Ubiquitous Technologies)}}
 
 
 
@@ -196,7 +198,7 @@ Profiling Users by Online Shopping Behaviors.
 %	GRANTS, HONORS AND AWARDS SECTION
 %----------------------------------------------------------------------------------------
 % \clearpage
-\section*{Honors \& Awards}
+\section*{Honors \& Awards \& Scholarships}
 \subsection*{Honors}
 \years{2016}
 \href{http://lzhbrian.me/old/posts_figure/maker.jpeg}{Maker Representative}, Tsinghua University\\
@@ -211,25 +213,31 @@ College Admission Offers From: \\
 
 \subsection*{Awards}
 \years{2016}
-Championship (as Team Leader), \href{http://thumaker.cn/blog/2017%E5%88%9B%E5%AE%A2%E6%8C%91%E6%88%98%E8%B5%9B-%E6%8A%A5%E5%90%8D%E4%BB%85%E6%AD%A4%E4%B8%80%E5%91%A8/}{Tsinghua Make-a-thon} 2016\\
+Championship (as Team Leader), \href{http://thumaker.cn/blog/2017%E5%88%9B%E5%AE%A2%E6%8C%91%E6%88%98%E8%B5%9B-%E6%8A%A5%E5%90%8D%E4%BB%85%E6%AD%A4%E4%B8%80%E5%91%A8/}{\emph{Tsinghua Make-a-thon}} 2016\\
 \years{2015}
-3rd Prize (as Team Leader), Final, \href{https://www.chinaus-maker.org/}{China-US Maker Competition}, MoE, P.R.C \& Intel\\
-2nd Place (as Team Leader), Beijing, \href{https://www.chinaus-maker.org/}{China-US Maker Competition}, MoE, P.R.C \& Intel\\
-Championship (as Team Leader), \href{http://thumaker.cn/blog/2017%E5%88%9B%E5%AE%A2%E6%8C%91%E6%88%98%E8%B5%9B-%E6%8A%A5%E5%90%8D%E4%BB%85%E6%AD%A4%E4%B8%80%E5%91%A8/}{Tsinghua Make-a-thon} 2015\\
-3rd Prize (as Team Leader), \href{https://cpclash.eesast.com/}{Tsinghua Programming Contest} 2015
+3rd Prize (as Team Leader), Final, \href{https://www.chinaus-maker.org/}{\emph{China-US Maker Competition}}, MoE, P.R.C \& Intel\\
+2nd Place (as Team Leader), Beijing, \href{https://www.chinaus-maker.org/}{\emph{China-US Maker Competition}}, MoE, P.R.C \& Intel\\
+Championship (as Team Leader), \href{http://thumaker.cn/blog/2017%E5%88%9B%E5%AE%A2%E6%8C%91%E6%88%98%E8%B5%9B-%E6%8A%A5%E5%90%8D%E4%BB%85%E6%AD%A4%E4%B8%80%E5%91%A8/}{\emph{Tsinghua Make-a-thon}} 2015\\
+3rd Prize (as Team Leader), \href{https://cpclash.eesast.com/}{\emph{Tsinghua Programming Contest}} 2015
 \subsection*{Scholarships}
+
+\underline{Comprehensive Scholarships}\\
+\years{2017}
+\emph{Tsinghua Alumni - Bao Gang Scholarship} (Top 1/50), Tsinghua University \footnote{Highest Honor for HongKong, Macau, Taiwanese Students Studying in Mainland China}\\
+\emph{Tsinghua Alumni - Hong Qian Scholarship} (Top 30/260 in dept.), Tsinghua University \footnote{Awarded for multiple individual scholarships}\\
 \years{2016}
-\emph{Zheng Geru Scholarship (Top 35/260)} for Comprehensive Performance, Tsinghua University\\
-Second Prize (Top 3/50), \href{http://www.moe.gov.cn/jyb_xxgk/gk_gbgg/moe_0/moe_1133/moe_1134/tnull_14169.html}{\emph{Taiwanese Student Scholarship}}, Minister of Education, P.R.C\\
-\emph{Science and Technology} Excellence Scholarship, Tsinghua University\\
-\emph{Social Work} Excellence Scholarship, Tsinghua University\\
-\emph{Art and Cultural} Excellence Scholarship, Tsinghua University\\
+\emph{Tsinghua Alumni - Zheng Geru Scholarship} (Top 30/260 in dept.), Tsinghua University \footnote{Awarded for multiple individual scholarships}\\
+Second Prize \href{http://www.moe.gov.cn/jyb_xxgk/gk_gbgg/moe_0/moe_1133/moe_1134/tnull_14169.html}{\emph{Taiwanese Student Scholarship}} (Top 3/50), Minister of Education, P.R.C\\
 \years{2015} 
-First Prize (Top 2/50), \href{http://www.moe.gov.cn/jyb_xxgk/gk_gbgg/moe_0/moe_1133/moe_1134/tnull_14169.html}{\emph{Taiwanese Student Scholarship}}, Minister of Education, P.R.C\\
+First Prize \href{http://www.moe.gov.cn/jyb_xxgk/gk_gbgg/moe_0/moe_1133/moe_1134/tnull_14169.html}{\emph{Taiwanese Student Scholarship}} (Top 2/50), Minister of Education, P.R.C\\
+
+\underline{Individual Scholarships}\\
+\years{2015 - 2017}
 \emph{Science and Technology} Excellence Scholarship, Tsinghua University\\
-\emph{Social Work} Excellence Scholarship, Tsinghua University
-
-
+\years{2015 - 2017}
+\emph{Social Work} Excellence Scholarship, Tsinghua University\\
+\years{2016}
+\emph{Art and Cultural} Excellence Scholarship, Tsinghua University\\
 
 
 
@@ -267,7 +275,7 @@ Signal Processing, Electronic Circuit Design
                  gem5, Wireshark, Multisim, Modelsim\\
                  Arduino, Processing, SketchUp, 3D printing\\
                  Jupyter Notebook, Vim, tmux, CMake, gcc, g++\\
-                 Web Dev (Django,Yii, Bootstrap, HTML, CSS) \\
+                 Web Dev (Django, Yii, Bootstrap, HTML, CSS) \\
                  iOS Dev (Xcode), Android Dev (Android Studio)
 \subsection*{Languages}
 \years{Native} Mandarin\\
@@ -278,11 +286,12 @@ Signal Processing, Electronic Circuit Design
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\clearpage
+%\clearpage
 \section*{Courses taken}
 
 \subsection*{Online MOOC}
-\years{CS344} \href{https://cn.udacity.com/course/intro-to-parallel-programming--cs344}{Intro to Parallel Programming (CUDA GPU) (Udacity)}
+\years{CS344} \href{https://cn.udacity.com/course/intro-to-parallel-programming--cs344}{Intro to Parallel Programming (CUDA GPU) (Udacity)}\\
+\years{ML} \href{https://www.coursera.org/learn/machine-learning}{Machine Learning (Coursera)}
 
 \subsection*{B.S. in Electronic Information}
 \years{Computer \\Science \\related}
