--- a/resume/cn.tex
+++ b/resume/cn.tex
@@ -93,6 +93,15 @@
       ~~\textit{\small#4}\\
     \end{tabular*}\vspace{-5pt}
 }
+\newcommand{\resumeSubheadinghonortwotwo}[6]{
+  \vspace{-1pt}\item
+    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+      \textbf{#1} {#2}\\
+      \textbf{#3} {#4}\\
+      ~~\textit{\small#5}\\
+      ~~\textit{\small#6}\\
+    \end{tabular*}\vspace{-5pt}
+}
 \newcommand{\sectionwithbox}[1]{
   \section[]{\colorbox[rgb]{0.8,0.8,0.8}{\textbf{#1}}}
 }
@@ -185,7 +194,6 @@
       {\textbf{研究软件工程实习生}}{2016.3 - Present (5 mo)}
       \resumeItemListStart
         \resumeItem{实时脸部表情捕捉系统 (on-going)}\\
-        \vspace{1mm}
         \resumeItem{CUDA C++ GPU 并行编程加速}\\
         \vspace{1mm}
 
@@ -199,7 +207,7 @@
       {\textbf{研究助理} in 未来通信与网络实验室}{2016.4 - Present (1.5 yr)}
       \resumeItemListStart
    \resumeItem{已发表/接受: AAAI ICWSM, IEEE Globecom, ACM CIKM}\\
-   \resumeItem{已提交: ACM CoNEXT, IEEE TNSM}\\
+   \resumeItem{已提交: IEEE TNSM (Major), Springer Multimedia Tools \& Apps. (Minor), ACM CoNEXT}\\
    \resumeItem{大数据、用户画像分析~多个项目}\\
         \vspace{1.5mm}
    {- 包括~网络视频服务用户行为挖掘, 在线购物用户行为挖掘, 应用内用户行为识别, 等等.}\\
@@ -237,13 +245,13 @@
 \sectionwithbox{部分奖项与荣誉}
   \resumeSubHeadingListStart
     \resumeSubheadinghonorone
-      {审稿人}{, \textbf{IEEE TNSM} (IEEE Transactions on Network and Service Management)}
+      {审稿人}{: \textbf{IEEE TNSM}, \textbf{ACM IMWUT(Ubicomp)} }
 
     \resumeSubheadinghonorone
       {\href{http://lzhbrian.me/posts_figure/maker.jpeg}{清华创客代表}}{, 因在创客领域所获得的成就以及贡献, 清华大学}
       
     \resumeSubheadinghonor
-      {启创计划成员}{, 清华大学}
+      {启创计划}{, 清华大学}
       {由清华大学校团委所主持培养创新、创业人才计划，\underline{\textbf{全校仅录取~30~余人}}}
 
     \resumeSubheadinghonor
@@ -251,10 +259,8 @@
       {Role: \textbf{\emph{队长，项目负责人}} \& \textbf{\emph{iOS 开发}}}
             
     \resumeSubheadinghonorone
-      {冠军 (1st/15 支队伍), 清华创客挑战赛~2016}{, 清华大学}
+      {冠军 (1st/15 支队伍), 清华创客挑战赛~2015，2016 连续两年}{, 清华大学}
 
-    \resumeSubheadinghonorone
-      {冠军 (1st/15 支队伍), 清华创客挑战赛~2015}{, 清华大学}
 \resumeSubHeadingListEnd
 
 
@@ -263,12 +269,13 @@
 
   \resumeSubHeadingListStart
      \resumeSubheadinghonor
-      {中国教育部台湾学生 一等(2015)、二等奖学金(2016)}{, 中华人民共和国~教育部}
-      {\underline{\textbf{Top 3/50}}, 颁发给在大陆学习的优秀台湾学生}
+      {中国教育部台湾学生~宝钢(2017)、一等(2015)、二等奖学金(2016)}{, 中华人民共和国~教育部}
+      {在大陆学习的台湾学生 所能获得的 \underline{\textbf{最高荣誉}}}
 
-     \resumeSubheadinghonortwo
-      {清华之友~-~郑格如~综合奖学金(2016)}{, 清华大学}
-      {\underline{\textbf{Top 35/260}}, 获得~\textbf{多个单项奖学金}~后所参评的\textbf{综合奖学金}}
+     \resumeSubheadinghonortwotwo
+     {清华之友~-~宏乾奖学金(2017)}{, 清华大学}
+      {清华之友~-~郑格如奖学金(2016)}{, 清华大学}
+      {\underline{\textbf{Top 30/260}}, 获得~\textbf{多个单项奖学金}~后所参评的\textbf{综合奖学金}}
       {包括: \underline{\small\textbf{科技创新优秀奖学金}}, \underline{\small\textbf{社工优秀奖学金}}, \underline{\small\textbf{文艺优秀奖学金}}}
 
   \resumeSubHeadingListEnd
