--- a/resume/eng.tex
+++ b/resume/eng.tex
@@ -84,6 +84,15 @@
       ~~\textit{\small#3}\\
     \end{tabular*}\vspace{-5pt}
 }
+\newcommand{\resumeSubheadinghonortwotwo}[6]{
+  \vspace{-1pt}\item
+    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+      \textbf{#1} {#2}\\
+      \textbf{#3} {#4}\\
+      ~~\textit{\small#5}\\
+      ~~\textit{\small#6}\\
+    \end{tabular*}\vspace{-5pt}
+}
 \newcommand{\resumeSubheadinghonortwo}[4]{
   \vspace{-1pt}\item
     \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
@@ -197,7 +206,7 @@
       {\textbf{Research Assistant} in Future Communication \& Internet Lab}{Apr 2016 - Present (1.5 yr)}
       \resumeItemListStart
 	 \resumeItem{Published/Accepted: AAAI ICWSM, IEEE Globecom, ACM CIKM}\\
-	 \resumeItem{Submitted: ACM CoNEXT, IEEE TNSM}\\
+	 \resumeItem{Submitted: IEEE TNSM (Major), Springer Multimedia Tools \& Apps. (Minor), ACM CoNEXT}\\
 	 \resumeItem{Several Projects in Big Data Mining \& User Behavior Analysis}\\
         \vspace{1mm}
 	 {- Including Online Video Consumption Behaviors Analysis, Online Shopping Behaviors Analysis, In-app user Clicking Behaviors Identification, etc.}\\
@@ -227,7 +236,7 @@
     \resumeSubheading
       {\href{http://www.eesast.com}{Student Association of Science and Technology, EE, THU}}
       {Beijing, China}
-      {\textbf{Vice Leader of Dept.of Web \& Publicity}, also Web Dev Lead}{Jul 2015 - May 2016 (9 mo)}
+      {\textbf{Vice Leader of Dept.of Web \& Publicity}, also as Web Dev Lead}{Jul 2015 - May 2016 (9 mo)}
       
   \resumeSubHeadingListEnd
 
@@ -241,7 +250,7 @@
   \resumeSubHeadingListStart
   
       \resumeSubheadinghonorone
-      {Invited Reviewer}{, IEEE TNSM (IEEE Transactions on Network and Service Management)}
+      {Invited Reviewer}{: \textbf{IEEE TNSM}, \textbf{ACM IMWUT(Ubicomp)}}
   
     \resumeSubheadinghonorone
       {\href{http://lzhbrian.me/posts_figure/maker.jpeg}{Maker Representative}}{, Honored this title for the contrib. \& achieve. in the maker field, Tsinghua Universtiy}
@@ -256,11 +265,7 @@
             
 
     \resumeSubheadinghonorone
-      {Championship (1st/15 teams), Tsinghua Make-a-thon 2016}{, Tsinghua Universtiy}
-
-    \resumeSubheadinghonorone
-      {Championship (1st/15 teams), Tsinghua Make-a-thon 2015}{, Tsinghua Universtiy}
-      
+      {Championship (1st/15 teams), Tsinghua Make-a-thon 2015, 2016 consecutively}{, Tsinghua Universtiy}
       
       
   \resumeSubHeadingListEnd
@@ -274,12 +279,13 @@
 
   \resumeSubHeadingListStart
      \resumeSubheadinghonor
-      {1st(2015), 2nd(2016) Prize Scholarship for Taiwanese Student}{, Minister of Education, P.R.C.}
-      {\underline{Top 3/50}, Awarded 1st prize scholarship honor for Taiwanese students studying in Mainland China.}
+      {BaoGang(2017), 1st(2015), 2nd(2016) Scholarship for Taiwanese Student}{, Minister of Education, P.R.C.}
+      {\underline{\textbf{Highest Honor}}  for Taiwanese students studying in Mainland China.}
 
-     \resumeSubheadinghonortwo
-      {Excellence Scholarship(Zheng Geru) for Comprehensive Performance(2016)}{, Tsinghua University}
-      {\underline{Top 35/260}, for students who have \underline{achieved \textbf{multiple individual scholarships}}.}
+     \resumeSubheadinghonortwotwo
+      {Tsinghua Alumni - Zheng Geru Scholarship (2016)}{, Tsinghua University}
+      {Tsinghua Alumni - Hong Qian Scholarship (2017)}{, Tsinghua University}
+      {\underline{Top 30/260}, for students who have \underline{achieved \textbf{multiple individual scholarships}}.}
       {Including excellence scholarships for: \underline{\small\textbf{Science and Technology}}, \underline{\small\textbf{Social Work}}, \underline{\small\textbf{Arts and Cultural}}, respectively.}
     
 
