--- a/CV/cv.tex
+++ b/CV/cv.tex
@@ -198,27 +198,9 @@ Profiling Users by Online Shopping Behaviors.
 %	GRANTS, HONORS AND AWARDS SECTION
 %----------------------------------------------------------------------------------------
 % \clearpage
-\section*{Honors \& Awards \& Scholarships}
-\subsection*{Honors}
-\years{2016}
-\href{http://lzhbrian.me/old/posts_figure/maker.jpeg}{Maker Representative}, Tsinghua University\\
-\years{2015}
-Member of the \href{http://news.tsinghua.edu.cn/publish/thunews/10303/2013/20131128144743953412518/20131128144743953412518_.html}{\emph{Qi Chuang} Entrepreneurial Talent Training Program}, Tsinghua Universtiy\\
-\years{2014}
-Graduate from high school with the highest honor.\\
-College Admission Offers From: \\
-\emph {\small \href{http://www.tsinghua.edu.cn/}{Tsinghua University} (THU), \href{http://pku.edu.cn/}{Peking University} (PKU), \href{http://www.hku.hk/}{Hong Kong University} (HKU), \\
-\href{https://www.ntu.edu.tw/}{National Taiwan University} (NTU), \href{http://www.nthu.edu.tw/}{National Tsing Hua University} (NTHU)}
+\section*{Scholarships \& Honors \& Awards}
 
 
-\subsection*{Awards}
-\years{2016}
-Championship (as Team Leader), \href{http://thumaker.cn/blog/2017%E5%88%9B%E5%AE%A2%E6%8C%91%E6%88%98%E8%B5%9B-%E6%8A%A5%E5%90%8D%E4%BB%85%E6%AD%A4%E4%B8%80%E5%91%A8/}{\emph{Tsinghua Make-a-thon}} 2016\\
-\years{2015}
-3rd Prize (as Team Leader), Final, \href{https://www.chinaus-maker.org/}{\emph{China-US Maker Competition}}, MoE, P.R.C \& Intel\\
-2nd Place (as Team Leader), Beijing, \href{https://www.chinaus-maker.org/}{\emph{China-US Maker Competition}}, MoE, P.R.C \& Intel\\
-Championship (as Team Leader), \href{http://thumaker.cn/blog/2017%E5%88%9B%E5%AE%A2%E6%8C%91%E6%88%98%E8%B5%9B-%E6%8A%A5%E5%90%8D%E4%BB%85%E6%AD%A4%E4%B8%80%E5%91%A8/}{\emph{Tsinghua Make-a-thon}} 2015\\
-3rd Prize (as Team Leader), \href{https://cpclash.eesast.com/}{\emph{Tsinghua Programming Contest}} 2015
 \subsection*{Scholarships}
 
 \underline{Comprehensive Scholarships}\\
@@ -239,6 +221,28 @@ First Prize \href{http://www.moe.gov.cn/jyb_xxgk/gk_gbgg/moe_0/moe_1133/moe_1134
 \years{2016}
 \emph{Art and Cultural} Excellence Scholarship, Tsinghua University\\
 
+
+
+\subsection*{Honors}
+\years{2016}
+\href{http://lzhbrian.me/old/posts_figure/maker.jpeg}{Maker Representative}, Tsinghua University\\
+\years{2015}
+Member of the \href{http://news.tsinghua.edu.cn/publish/thunews/10303/2013/20131128144743953412518/20131128144743953412518_.html}{\emph{Qi Chuang} Entrepreneurial Talent Training Program}, Tsinghua Universtiy\\
+\years{2014}
+Graduate from high school with the highest honor.\\
+College Admission Offers From: \\
+\emph {\small \href{http://www.tsinghua.edu.cn/}{Tsinghua University} (THU), \href{http://pku.edu.cn/}{Peking University} (PKU), \href{http://www.hku.hk/}{Hong Kong University} (HKU), \\
+\href{https://www.ntu.edu.tw/}{National Taiwan University} (NTU), \href{http://www.nthu.edu.tw/}{National Tsing Hua University} (NTHU)}
+
+
+\subsection*{Awards}
+\years{2016}
+Championship (as Team Leader), \href{http://thumaker.cn/blog/2017%E5%88%9B%E5%AE%A2%E6%8C%91%E6%88%98%E8%B5%9B-%E6%8A%A5%E5%90%8D%E4%BB%85%E6%AD%A4%E4%B8%80%E5%91%A8/}{\emph{Tsinghua Make-a-thon}} 2016\\
+\years{2015}
+3rd Prize (as Team Leader), Final, \href{https://www.chinaus-maker.org/}{\emph{China-US Maker Competition}}, MoE, P.R.C \& Intel\\
+2nd Place (as Team Leader), Beijing, \href{https://www.chinaus-maker.org/}{\emph{China-US Maker Competition}}, MoE, P.R.C \& Intel\\
+Championship (as Team Leader), \href{http://thumaker.cn/blog/2017%E5%88%9B%E5%AE%A2%E6%8C%91%E6%88%98%E8%B5%9B-%E6%8A%A5%E5%90%8D%E4%BB%85%E6%AD%A4%E4%B8%80%E5%91%A8/}{\emph{Tsinghua Make-a-thon}} 2015\\
+3rd Prize (as Team Leader), \href{https://cpclash.eesast.com/}{\emph{Tsinghua Programming Contest}} 2015
 
 
 %----------------------------------------------------------------------------------------
