Add pub, mooc, modify scholarships

--- a/CV/cv.tex
+++ b/CV/cv.tex
@@ -183,15 +183,14 @@ May 2017\\
 In-app User Clicking Behavior Identification via Mobile Traffic Mining.
 \textbf{Submitted to ACM CoNEXT'17}
 \subsection*{Journal}
+\years{\textbf{\href{https://link.springer.com/journal/11042}{Springer\\MTAP}}}
+Huan Yan, Zhifeng Wang, \textbf{Tzu-Heng Lin}, Yong Li, Depeng Jin.
+Profiling Users by Online Shopping Behaviors.
+\textbf{Accepted, Multimedia Tools and Applications, Springer}\\
 \years{\textbf{\href{http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=4275028}{IEEE \\TNSM}}}
 Huan Yan, \textbf{Tzu-Heng Lin}, Chuhan Gao, Yong Li, Depeng Jin.
 On the Understanding of User Behaviors Over Multiple Video Content Providers.
-\textbf{Submitted to IEEE TNSM}\\
-\years{\textbf{\href{https://link.springer.com/journal/11042}{Springer}}}
-Huan Yan, Zhifeng Wang, \textbf{Tzu-Heng Lin}, Yong Li, Depeng Jin.
-Profiling Users by Online Shopping Behaviors.
-\textbf{Submitted to Multimedia Tools and Applications, Springer}
-
+\textbf{Submitted to IEEE TNSM}
 
 
 %----------------------------------------------------------------------------------------
@@ -203,21 +202,21 @@ Profiling Users by Online Shopping Behaviors.
 
 \subsection*{Scholarships}
 
-\underline{Comprehensive Scholarships}\\
+\underline{Scholarships for Comprehensive Performance}\\
 \years{2017}
-\emph{Tsinghua Alumni - Bao Gang Scholarship} (Top 1/50), Tsinghua University \footnote{Highest Honor for HongKong, Macau, Taiwanese Students Studying in Mainland China}\\
-\emph{Tsinghua Alumni - Hong Qian Scholarship} (Top 30/260 in dept.), Tsinghua University \footnote{Awarded for multiple individual scholarships}\\
+\emph{\href{https://baike.baidu.com/item/\%E5\%AE\%9D\%E9\%92\%A2\%E6\%95\%99\%E8\%82\%B2\%E5\%A5\%96/4450286}{Bao Gang Scholarship}} (Top 1\%, highest honor), Baosteel Education Foundation \footnote{Highest Honor for HongKong, Macau, Taiwanese Students Studying in Mainland China}\\
+\emph{Tsinghua Alumni - Hong Qian Scholarship} (Top 10\%), Tsinghua University \footnote{Awarded for multiple individual scholarships}\\
 \years{2016}
-\emph{Tsinghua Alumni - Zheng Geru Scholarship} (Top 30/260 in dept.), Tsinghua University \footnote{Awarded for multiple individual scholarships}\\
+\emph{Tsinghua Alumni - Zheng Geru Scholarship} (Top 10\%), Tsinghua University \footnote{Awarded for multiple individual scholarships}\\
 Second Prize \href{http://www.moe.gov.cn/jyb_xxgk/gk_gbgg/moe_0/moe_1133/moe_1134/tnull_14169.html}{\emph{Taiwanese Student Scholarship}} (Top 3/50), Minister of Education, P.R.C\\
 \years{2015} 
 First Prize \href{http://www.moe.gov.cn/jyb_xxgk/gk_gbgg/moe_0/moe_1133/moe_1134/tnull_14169.html}{\emph{Taiwanese Student Scholarship}} (Top 2/50), Minister of Education, P.R.C\\
 
-\underline{Individual Scholarships}\\
+\underline{Individual University Scholarships}\\
 \years{2015 - 2017}
-\emph{Science and Technology} Excellence Scholarship, Tsinghua University\\
+\emph{Science and Technology} Excellence Scholarship, Tsinghua University x 3\\
 \years{2015 - 2017}
-\emph{Social Work} Excellence Scholarship, Tsinghua University\\
+\emph{Social Work} Excellence Scholarship, Tsinghua University x 3\\
 \years{2016}
 \emph{Art and Cultural} Excellence Scholarship, Tsinghua University\\
 
@@ -284,7 +283,7 @@ Signal Processing, Electronic Circuit Design
 \subsection*{Languages}
 \years{Native} Mandarin\\
 \years{Fluent}English (TOEFL 102, IELTS 7.5, TOEIC 910, GEPT high-intermediate)\\
-\years{Basic} Taiwanese, Shanghainese
+\years{Basic} Taiwanese
 
 
 
@@ -295,7 +294,8 @@ Signal Processing, Electronic Circuit Design
 
 \subsection*{Online MOOC}
 \years{CS344} \href{https://cn.udacity.com/course/intro-to-parallel-programming--cs344}{Intro to Parallel Programming (CUDA GPU) (Udacity)}\\
-\years{ML} \href{https://www.coursera.org/learn/machine-learning}{Machine Learning (Coursera)}
+\years{ML} \href{https://www.coursera.org/account/accomplishments/records/NNFSAZ87WJSQ}{Machine Learning (Coursera)}\\
+\years{DL.AI} \href{https://www.coursera.org/account/accomplishments/records/ABLMNMQHGCQH}{Neural Networks and Deep Learning (Coursera)}
 
 \subsection*{B.S. in Electronic Information}
 \years{Computer \\Science \\related}
